<resources>
    <string name="app_name">Story App</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_story">Add Story</string>
    <string name="action_logout">Logout</string>

    <string name="email_error"> Invalid Email Address</string>
    <string name="password_error">Passwords required at least 6 characters</string>
    <string name="username">Username</string>
    <string name="date">2 Nov 2022</string>
    <string name="description">Description</string>
    <string name="image_story">Image Story</string>
    <string name="image_splash">Image Splash</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="image_logo_login">Image Login Logo</string>
    <string name="image_camera_icon">Image Camera Icon</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="offer_signup">Don\'t have an account?</string>
    <string name="offer_login">Already have an account?</string>
    <string name="register_open_login">Sign Up</string>

    <string name="message_action">Enter your %1$s</string>
    <string name="error_login">Login failed, please try again!</string>
    <string name="error_signup">Signup failed, please try again!</string>
    <string name="title_activity_story">StoryActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btn_add_story">Add Story</string>

    <string name="permission_failed">Permission denied</string>
    <string name="message_upload_image">Please upload your image!</string>
    <string name="open_gallery">Choose a picture</string>
    <string name="error_camera">Error showing camera</string>
    <string name="error_pick_image">Failed take a picture</string>
    <string name="timeout">Timeout</string>
    <string name="retry">Retry</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="action_maps">Maps</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="content_description">This is Image</string>
    <string name="first_name">Username</string>
    <string name="last_name">Last Name</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
</resources>