<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.storyapp.ui.main.MainActivity">

    <item
        android:id="@+id/action_add_story"
        android:orderInCategory="100"
        android:title="@string/action_add_story"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_maps"
        android:orderInCategory="100"
        android:title="@string/action_maps"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>