<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pensive1"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/imgDetailStory"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_224"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_18"
        android:contentDescription="@string/image_story"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDetailUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@+id/imgDetailStory"
        app:layout_constraintTop_toBottomOf="@+id/imgDetailStory" />

    <TextView
        android:id="@+id/tvDetailDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@+id/tvDetailUsername"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailUsername" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="@+id/imgDetailStory"
        app:layout_constraintTop_toBottomOf="@+id/imgDetailStory" />
</androidx.constraintlayout.widget.ConstraintLayout>