<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pensive1"
    tools:context=".ui.story.StoryActivity">

    <ImageView
        android:id="@+id/imgStory"
        android:layout_width="@dimen/dp_380"
        android:layout_height="@dimen/dp_380"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:contentDescription="@string/image_story"
        android:src="@drawable/ic_upload_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:alpha="0"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/blue5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tflDescription"
        app:srcCompat="@drawable/ic_baseline_add"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.example.storyapp.ui.customcomponent.CustomTextInputLayout
        android:id="@+id/tflDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_16"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="@+id/imgStory"
        app:layout_constraintStart_toStartOf="@+id/imgStory"
        app:layout_constraintTop_toBottomOf="@+id/imgStory">

        <com.example.storyapp.ui.customcomponent.CustomTextInputEditText
            android:id="@+id/edtDescription"
            style="@style/Subtitle1Semibold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:hint="@string/description" />
    </com.example.storyapp.ui.customcomponent.CustomTextInputLayout>

    <Button
        android:id="@+id/btnAddStory"
        style="@style/Subtitle2Bold"
        android:layout_width="@dimen/dp_190"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:alpha="0"
        android:backgroundTint="@color/blue5"
        android:text="@string/btn_add_story"
        app:layout_constraintStart_toStartOf="@+id/tflDescription"
        app:layout_constraintTop_toBottomOf="@+id/tflDescription" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fab_gallery"
        app:layout_constraintEnd_toEndOf="@+id/fab"
        app:srcCompat="@drawable/ic_f_camera" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fab"
        app:layout_constraintEnd_toEndOf="@+id/fab"
        app:srcCompat="@drawable/ic_baseline_gallery" />

</androidx.constraintlayout.widget.ConstraintLayout>